--- a/css/styles.css
+++ b/css/styles.css
@@ -57,17 +57,15 @@ body {
     color: white;
 }
 
-.top-half, .bottom-half {
-    flex: 1;
-    border: 2px solid black;
+.top-half {
     display: flex;
     flex-direction: column;
-    gap: 6px;
+    flex: 3;
+    gap: 8px;
 }
 
 .first-row, .second-row, .third-row {
     flex: 1;
-    /* border: 2px solid black; */
     display: flex;
     gap: 8px;
 }
@@ -76,12 +74,57 @@ body {
     flex: 1;
 }
 
-
-/* first-row, .second-row, .third-row, .fourth-row, .fifth-row, .equals{ */ */
-    /* display: flex; */
-    /* justify-content: space-between; */
-    /* gap: 8px; */
+.bottom-half {
+    flex: 2;
     /* border: 2px solid black; */
-    /* height: 12%; */
-    /* flex: 1; */
-/* } */
+    display: flex;
+    gap: 8px;
+}
+
+.left-side {
+    flex: 4.5;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+.equals {
+    flex: 1;
+}
+
+.fourth-row, .fifth-row {
+    flex: 1;
+    /* border: 2px solid black; */
+    display: flex;
+    gap: 8px;
+}
+
+.fourth-row button {
+    flex: 1;
+}
+
+.fifth-row {
+    display: flex;
+    /* border: 2px solid black; */
+}
+
+.fifth-row #zero {
+    flex: 2.6;
+}
+
+.fifth-row #decimal {
+    flex: 1;
+}
+
+button {
+    border-radius: 10px;
+    font-size: 20px;
+}
+
+.first-row #clear, .first-row #delete{
+    background-color: rgb(212, 43, 43);
+}
+
+.bottom-half .equals {
+    background-color: rgb(38, 38, 178);
+}
