--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,11 @@ body {
     width: 90%;
     height: 15%;
     border-radius: 10px;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 50px;
 }
 
 .buttons {
